--- a/playbooks/helios-master-ubuntu.yml
+++ b/playbooks/helios-master-ubuntu.yml
@@ -14,6 +14,8 @@
     - { role: run-before, period: daily  }
     - { role: base,       when: periodic }
     - { role: ansible,    when: periodic }
+    - { role: java,       when: periodic, java_distribution: 'default-jdk' }
+    - { role: zookeeper,  when: periodic, install_exhibitor: yes }
     - { role: golang,     when: periodic }
     - { role: skydns,     when: periodic }
     - { role: helios,     helios_role: master }
