--- a/playbooks/roles/helios/tasks/agent.yml
+++ b/playbooks/roles/helios/tasks/agent.yml
@@ -1,17 +1,12 @@
 ---
-- debug: var=helios_master
-- debug: var=helios_master_port
-- debug: var=zookeeper_port
-- debug: var=registrar_port
-- debug: var=domain
-- debug: var=ansible_fqdn
-- debug: var=facter_ipaddress_eth1
+- include: verify-master.yml master={{ helios_master }}
 
 - set_fact:
-    registrar_plugin:   "{{ helios.agent.registrar_plugin.jar | tokens( helios.agent.registrar_plugin ) }}"
-    registrar_endpoint: "http://{{ helios_master }}:{{ registrar_port }}"
+    registrar_plugin: "{{ helios.agent.registrar_plugin.jar | tokens( helios.agent.registrar_plugin ) }}"
 
-- include: verify-master.yml
+- name: Stopping Helios agent service
+  service: name=helios-agent state=stopped
+  ignore_errors: yes
 
 - name: Downloading registrar plugin
   get_url:
@@ -35,5 +30,5 @@
 - name: Installing Helios agent
   apt:  deb="{{ helios.home }}/helios-agent_{{ helios_version }}_all.deb"
 
-- name: Restarting Helios agent service
-  service: name=helios-agent state=restarted enabled=yes
+- name: Starting Helios agent service
+  service: name=helios-agent state=started enabled=yes
