--- a/playbooks/roles/helios/vars/main.yml
+++ b/playbooks/roles/helios/vars/main.yml
@@ -9,19 +9,7 @@ helios: {
     pattern: '^\d+\.\d+\.\d+$'
   },
   master: {
-    config:  "{{ ubuntu.etc_default }}/helios-master",
-    exhibitor: {
-      version: latest, # 1.5.2 or latest
-      gradle_provider: '{{ common.github }}/evgeny-goldin/gradle-provider.git',
-      home:            /opt/exhibitor,
-      latest: {
-        command: "curl -s 'http://jcenter.bintray.com/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
-        pattern: '^\d+\.\d+\.\d+$'
-      }
-    },
-    zookeeper: {
-      config: /etc/zookeeper/conf/zoo.cfg
-    }
+    config: "{{ ubuntu.etc_default }}/helios-master"
   },
   agent: {
     config:           "{{ ubuntu.etc_default }}/helios-agent",
