--- a/playbooks/roles/helios/tasks/verify-master.yml
+++ b/playbooks/roles/helios/tasks/verify-master.yml
@@ -8,9 +8,10 @@
   wait_for: host={{ master }} port={{ item }} timeout=3
   with_items:
     - "{{ common.net.dns_port }}"
+    - "{{ helios_master_port }}"
     - "{{ zookeeper_port }}"
     - "{{ etcd_port }}"
-    - "{{ helios_master_port }}"
+    - "{{ exhibitor_port }}"
 
 - name: Verifying Helios master HTTP endpoints
   uri:  url=http://{{ master }}:{{ item.port }}{{ item.path }} status_code={{ item.status }}
