--- a/playbooks/roles/skydns/vars/main.yml
+++ b/playbooks/roles/skydns/vars/main.yml
@@ -1,6 +1,7 @@
 
 etcd: {
   version:  2.0.0-rc.1, # https://github.com/coreos/etcd/releases
+  port:     4001,
   dir_name: etcd-v<version>-linux-amd64,
   url:      '{{ common.github }}/coreos/etcd/releases/download/v<version>/<dir_name>.tar.gz',
   archive:  /opt/etcd-<version>.tar.gz,
