--- a/playbooks/roles/zookeeper/tasks/exhibitor.yml
+++ b/playbooks/roles/zookeeper/tasks/exhibitor.yml
@@ -1,8 +1,8 @@
 ---
-- name: Setting up Exhibitor variables
-  set_fact:
+- set_fact:
     exhibitor_version: "{{ exhibitor.version | calculate( exhibitor.latest ) }}"
 - set_fact:
+    exhibitor_port:    "{{ exhibitor_port | default( exhibitor.port ) }}"
     exhibitor_jar:     "{{ exhibitor.home }}/build/libs/exhibitor-{{ exhibitor_version }}.jar"
 
 - name: Stopping Exhibitor service
