--- a/playbooks/roles/mkdir.yml
+++ b/playbooks/roles/mkdir.yml
@@ -1,3 +1,3 @@
 ---
 # Creates parent directory of the file specified
-- command: mkdir -p "$(dirname '{{ file }}')"
+- command: mkdir -p $(dirname {{ file }})
