--- a/playbooks/roles/golang/vars/main.yml
+++ b/playbooks/roles/golang/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 go: {
-  version: latest, # 1.4 or latest
+  version: latest, # 1.4 or latest - https://golang.org/dl/
   latest: {
     command: "curl -s 'https://golang.org/dl/' | grep '.src.tar.gz' | sed -r 's/<[^>]+>//g' | sed 's/\\.src\\.tar\\.gz//g' | sed -r 's/go//' | awk '{print $1}' | head -1",
     pattern: '^\d+\.\d+'
