--- a/playbooks/roles/ruby/vars/main.yml
+++ b/playbooks/roles/ruby/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 ruby: {
-  version: latest,  # 2.1.5 or latest
+  version: latest,  # 2.2.0 or latest - https://www.ruby-lang.org/en/downloads/
   installer: 'rvm', # Or 'rbenv'
   latest: {
     command: "curl -s 'https://www.ruby-lang.org/en/downloads/' | grep 'The current stable version is' | cut -d' ' -f6 | sed 's/\\.$//'",
