--- a/playbooks/roles/helios/tasks/agent.yml
+++ b/playbooks/roles/helios/tasks/agent.yml
@@ -13,7 +13,7 @@
     url:  "{{ helios.agent.registrar_plugin.url | tokens( helios.agent.registrar_plugin ) }}"
     dest: "{{ registrar_plugin }}"
 
-- include: "{{ playbook_dir }}/roles/mkdir.yml"
+- include: "{{ common.mkdir }}"
   vars:
     file:  "{{ helios.agent.config_endpoints }}"
 
