--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -16,7 +16,11 @@ common: {
   },
 
   github:  'https://github.com',
-  bintray: 'https://jcenter.bintray.com',
+  jcenter: 'https://jcenter.bintray.com',
+  bintray: 'https://dl.bintray.com',
+
+  download_unpack: "{{ playbook_dir }}/roles/download-unpack.yml",
+  mkdir:           "{{ playbook_dir }}/roles/mkdir.yml",
 
   # Whether roles should start services installed
   start_service: true
