--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -18,12 +18,13 @@ common: {
   repo: {
     github:  'https://github.com',
     jcenter: 'https://jcenter.bintray.com',
-    bintray: 'https://dl.bintray.com',  
+    bintray: 'https://dl.bintray.com',
   },
-  
-  path: {
-    download_unpack: "{{ playbook_dir }}/roles/download-unpack.yml",
-    mkdir:           "{{ playbook_dir }}/roles/mkdir.yml",
+
+  utils: {
+    download: "{{ playbook_dir }}/utils/download.yml",
+    mkdir:    "{{ playbook_dir }}/utils/mkdir.yml",
+    service:  "{{ playbook_dir }}/utils/service.yml",
   },
 
   # Whether roles should start services installed
