--- a/playbooks/roles/artifactory/tasks/main.yml
+++ b/playbooks/roles/artifactory/tasks/main.yml
@@ -21,7 +21,7 @@
     content:     '0;URL=/artifactory'
 
 - name:     Waiting for Artifactory to start
-  command:  curl http://{{ common.net.localhost }}:{{ artifactory_port }}/artifactory/api/system/ping
+  command:  curl 'http://{{ common.net.localhost }}:{{ artifactory_port }}/artifactory/api/system/ping'
   register: ping_result
   until:    ping_result.stdout == 'OK'
   retries:  20
@@ -30,8 +30,8 @@
 - name: Verifying Artifactory HTTP endpoints
   uri:  url="http://{{ common.net.localhost }}:{{ artifactory_port }}{{ item.path }}"
   with_items:
-    - { path: '/artifactory/api/system/ping' }
-    - { path: '/artifactory/api/application.wadl' }
-    - { path: '/artifactory/api/search/artifact?name=name' }
-    - { path: '/artifactory/webapp/home.html' }
-    - { path: '/artifactory/webapp/browserepo.html' }
+    - { path: "/artifactory/api/system/ping" }
+    - { path: "/artifactory/api/application.wadl" }
+    - { path: "/artifactory/api/search/artifact?name=name" }
+    - { path: "/artifactory/webapp/home.html" }
+    - { path: "/artifactory/webapp/browserepo.html" }
